no development vue mode

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@antimatter-dimensions/notations"></script>
 
 <!-- development version, includes helpful console warnings -->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
 <!-- production version, optimized for size and speed -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 <script>
     const INFINITY = new Decimal("1.8e308");
     const INFINITY2 = new Decimal("1.8e30800")
