--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="icon" href="favicon.png"/>
 
     <meta name="keywords" content="sussy"/>
-    <meta name="description" content="among us lolz"/>
+    <meta name="description" content="when the layers are omega 😳😳😳"/>
     <meta name="image" content="https://veprogames.github.io/omega-layers/cover.png"/>
     <meta name="theme-color" content="#F5431F"/>
 
     <meta name="og:title" content="sussy layers"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:description" content="among us lolz"/>
+    <meta name="og:description" content="when the layers are omega 😳😳😳"/>
     <meta name="og:image" content="https://veprogames.github.io/omega-layers/cover.png"/>
 
     <link rel="stylesheet" href="css/main.css"/>
