--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="favicon.png"/>
 
     <meta name="keywords" content="sussy"/>
-    <meta name="description" content="when the layers are omega 😳😳😳"/>
-    <meta name="image" content="https://veprogames.github.io/omega-layers/cover.png"/>
+    <meta name="description" content="when the layers are demo 😳😳😳"/>
+    <meta name="image" content="https://jwklong.github.io/sussy-layers/cover.png"/>
     <meta name="theme-color" content="#F5431F"/>
 
     <meta name="og:title" content="sussy layers"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:description" content="when the layers are omega 😳😳😳"/>
-    <meta name="og:image" content="https://veprogames.github.io/omega-layers/cover.png"/>
+    <meta name="og:description" content="when the layers are demo 😳😳😳"/>
+    <meta name="og:image" content="https://jwklong.github.io/sussy-layers/cover.png"/>
 
     <link rel="stylesheet" href="css/main.css"/>
     <link id="theme" rel="stylesheet" href="css/themes/sussy.css"/>
@@ -21,24 +21,24 @@
 <body>
 <div id="loading">
     <h2><span class="omega">&#3486;</span> - l &lambda; &gamma; e r s</h2>
-    <p>Initializing...</p>
+    <p>waiting for the existance</p>
 </div>
 <div id="app">
     <header>
         <nav>
             <div>
                 <h2><span class="omega">&#3486;</span> - l &lambda; &gamma; e r s</h2>
-                <button @click="settings.tab = 'Layers'"><img alt="L" class="inline" src="images/layers.svg"/> Layers</button>
+                <button @click="settings.tab = 'Layers'"><img alt="L" class="inline" src="images/layers.png"/> Layers</button>
                 <button @click="settings.tab = 'Achievements'"><img alt="A" class="inline" src="images/star.svg"/> Achievements</button>
-                <button @click="settings.tab = 'Guide'"><img alt="S" class="inline" src="images/information-circle.svg"/> Guide</button>
-                <button @click="settings.tab = 'Changelog'">&#3486; Changelog</button>
+                <button @click="settings.tab = 'Guide'"><img alt="G" class="inline" src="images/information-circle.svg"/> Guide</button>
+                <button @click="settings.tab = 'Changelog'"><img alt="C" class="inline" src="favicon.png"> Changelog</button>
                 <button @click="settings.tab = 'Settings'"><img alt="S" class="inline" src="images/settings.svg"/> Settings</button>
             </div>
             <div>
                 <layer-locked-button v-if="!isMeta" @click="settings.tab = 'Automators'" :layerid="1"><img alt="Au" class="inline" src="images/hardware-chip.svg"/> Automators</layer-locked-button>
                 <layer-locked-button v-if="!isMeta" @click="settings.tab = 'Volatility'" :layerid="2"><img alt="V" class="inline" src="images/save.svg"/> Volatility</layer-locked-button>
-                <layer-locked-button v-if="!isMeta" @click="settings.tab = 'Aleph'" :layerid="3">ඞ Tasks</layer-locked-button>
-                <layer-locked-button @click="settings.tab = 'ReStack'" :layerid="9"><img alt="LC" class="inline" src="images/layercoin.svg"/> ReStack</layer-locked-button>
+                <layer-locked-button v-if="!isMeta" @click="settings.tab = 'Aleph'" :layerid="3"><img alt="T" class="inline" src="favicon.png"> Tasks</layer-locked-button>
+                <layer-locked-button @click="settings.tab = 'ReStack'" :layerid="9"><img alt="R" class="inline" src="images/layercoin.png"/> ReStack</layer-locked-button>
                 <layer-locked-button v-if="isMeta" @click="settings.tab = 'Sabotage'" :layerid="1e250">○ Sabotage</layer-locked-button>
             </div>
         </nav>
@@ -85,6 +85,7 @@
     const INFINITY3 = new Decimal("1.8e308000000");
     var LETTERS = ["○","☛","🔫","🗡","ඞ"];
     var ORDERS = "</-=+x>";
+    var GIANTS = ["<span class='flipped-v'>ඞ</span>", "α","β"]
 </script>
 
 <script src="js/vocabulary.js"></script>
