--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="og:image" content="https://jwklong.github.io/sussy-layers/cover.png"/>
 
     <link rel="stylesheet" href="css/main.css"/>
-    <link id="theme" rel="stylesheet" href="css/themes/spooky.css"/>
+    <link id="theme" rel="stylesheet" href="css/themes/sussy.css"/>
 </head>
 <body>
 <div id="loading">
