--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="og:image" content="https://jwklong.github.io/sussy-layers/cover.png"/>
 
     <link rel="stylesheet" href="css/main.css"/>
+    <link href="https://allfont.net/allfont.css?fonts=comic-sans-ms" rel="stylesheet" type="text/css"/>
     <link id="theme" rel="stylesheet" href="css/themes/spooky.css"/>
 </head>
 <body>
@@ -74,7 +75,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=Array.prototype.flat"></script>
 
 <script src="js/break_eternity.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@antimatter-dimensions/notations"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@antimatter-dimensions/notations@1.6.0"></script>
 
 <!-- development version, includes helpful console warnings -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
