--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="og:image" content="https://jwklong.github.io/sussy-layers/cover.png"/>
 
     <link rel="stylesheet" href="css/main.css"/>
-    <link href="https://allfont.net/allfont.css?fonts=comic-sans-ms" rel="stylesheet" type="text/css"/>
+    <link href="https://www.dafontfree.net/embed/Y29taWMtc2Fucy1tcy1yZWd1bGFyJmRhdGEvNDAvYy8xMDA5MzQvQ09NSUMuVFRG" rel="stylesheet" type="text/css"/>
     <link id="theme" rel="stylesheet" href="css/themes/sussy.css"/>
 </head>
 <body>
